--- a/WahrheitOderPflicht.html
+++ b/WahrheitOderPflicht.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/CSS/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="./assets/JS/wahrheitOderPflicht.js" defer></script>
     <title>Wahrheit oder Pflicht</title>
 </head>
 <body>
     <main>
         <section id="wahrheit-pflicht-game">
         <div class="headline"><h1>WAHRHEIT ODER PFLICHT</h1></div>
+        <h3 id="WoPtoDo"></h3>
         <div class="btns">
             <button id="wahrheit-btn">Wahrheit</button>
         <p>oder</p>
